--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jmarsh <marvin@42.fr>                      +#+  +:+       +#+         #
+#    By: jmarsh <jmarsh@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/25 14:43:15 by jmarsh            #+#    #+#              #
-#    Updated: 2022/08/25 14:43:25 by jmarsh           ###   ########.fr        #
+#    Updated: 2022/09/14 15:18:32 by jmarsh           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
